--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,5 @@
 @import url('./recent.css');
 @import url('./global.css');
 @import url('./components/header.css');
+@import url('./components/start-using.css');
+@import url('./components/categories.css');
