--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,8 @@
 @import url('./components/header.css');
 @import url('./components/start-using.css');
 @import url('./components/categories.css');
+@import url('/css/components/how-work.css');
+@import url('/css/components/invite.css');
+@import url('/css/components/about-us.css');
+@import url('/css/components/faq.css');
+@import url('/css/components/footer.css');
