--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,7 @@
 @import url('/css/components/about-us.css');
 @import url('/css/components/faq.css');
 @import url('/css/components/footer.css');
+@import url('./components/services.css');
+@import url('./components/netflix12mnth.css');
+@import url('./components/faqhtml.css');
+@import url('./components/popup.css');
