--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,4 +1,7 @@
 .header {
+    position: fixed;
+    background-color: white;
+    z-index: 1;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -16,16 +19,26 @@
 }
 
 .header__name {
+    cursor: pointer;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
     font-family: 'Manrope';
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
     line-height: 130%;
-    padding-right: 116px;
-    cursor: default;
+    /* padding-right: 116px; */
+    cursor: pointer;
+    color: #171717;
+}
+
+.header__name img {
+    margin-right: 6px;
 }
 
 .header__navigation {
+    margin-left: 116px;
     padding-top: 18px;
     max-width: 419px;
     width: 100%;
@@ -35,9 +48,7 @@
 .header__panel-logo {
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding-left: 120px;
-}
+    align-items: center;}
 
 .header__navigation-link {
     font-family: 'Roboto';
@@ -194,7 +205,20 @@ visibility: visible;
     padding-top: 10px;
 }
 
+.header__login__button-container{
+    display: flex;
+    justify-content: center;
+    width: 136px;
+    height: 40px;
+    border-radius: 12px;
+    background-color: var(--blue);
+    border: none;
+}
+
 .header__login__button {
+    text-decoration: none;
+    line-height: 40px;
+    text-align: center;
     width: 136px;
     height: 40px;
     border-radius: 12px;
@@ -205,6 +229,17 @@ visibility: visible;
     font-style: normal;
     font-weight: 700;
     font-size: 17px;
-    line-height: 130%;
     cursor: pointer;
+}
+
+.header__login__button:hover{
+    background: white;
+    color: black;
+    border: 1px solid #1749B3;
+border-radius: 12px;
+}
+
+.header__login__button:active{
+    background: #4B84FD;
+    color: white;
 }
