--- a/css/components/categories.css
+++ b/css/components/categories.css
@@ -132,3 +132,196 @@ border-radius: 16px;
     height: 342px;
     border-radius: 32px;
 }
+
+.imgg__tablet{
+    display: none;
+}
+
+@media screen and (max-width: 1130px){
+    .categories__subscription{
+        padding-top: 100px;
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 1220px){
+    .categories{
+        height: 100%;
+    }
+    .categories__netflix{
+        width: 704px;
+height: 200px;
+    }
+    .categories__spotify{
+        width: 704px;
+height: 200px;
+margin: 17px 0 17px 0;
+    }
+    .categories__youtube{
+        width: 704px;
+height: 200px;
+    }
+    .categories__image{
+        width: 344px;
+height: 200.08px;
+    }
+    .categories__image img{
+        width: 344px;
+        height: 200.08px;
+        border-radius: 32px;
+    }
+    .categories__text p{
+        display: none;
+    }
+    .categories__text h3{
+        width: 300px;
+        /* height: 31px; */
+        font-size: 22px;
+        padding: 49px 28px 24px 32px;
+    }
+    .categories__text div{
+        margin: 0 0 48px 32px;
+        width: 135px;
+height: 48px;
+    }
+    .categories__text{
+        padding: 0;
+    }
+    .categories__image--youtube{
+        width: 420px;
+        height: 200.08px;
+    }
+    .imgg__pc{
+        display: none;
+    }
+    .imgg__tablet{
+        display: block;
+    }
+}
+
+.categories__netflix-mobile{
+    display: none;
+    width: 327px;
+    height: 500px;
+    background: #FFFFFF;
+box-shadow: 0px 4px 24px rgba(213, 216, 221, 0.2);
+border-radius: 24px;
+}
+
+.categories__spotify-mobile{
+    margin-top: 16px;
+    margin-bottom: 16px;
+    display: none;
+    width: 327px;
+    height: 500px;
+    background: #FFFFFF;
+box-shadow: 0px 4px 24px rgba(213, 216, 221, 0.2);
+border-radius: 24px;
+}
+
+.categories__youtube-mobile{
+    display: none;
+    width: 327px;
+    height: 500px;
+    background: #FFFFFF;
+box-shadow: 0px 4px 24px rgba(213, 216, 221, 0.2);
+border-radius: 24px;
+}
+
+
+.categories__title-mobile{
+    padding: 32px 20px 16px 20px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 140%;
+    color: #171717;
+}
+
+.categories__text-mobile p{
+    padding: 0 20px 32px 20px;
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 150%;
+color: #333333;
+}
+
+.categories__button-container-mobile{
+    margin: 0 20px 32px 20px;
+    display: flex;
+    width: 287px;
+    height: 48px;
+}
+
+.categories__button-container-mobile a{
+    text-decoration: none;
+    text-align: center;
+    width: 287px;
+    height: 48px;
+    background-color: var(--blue);
+    border-radius: 16px;
+    border: 0;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 54px;
+    color: var(--white);
+    /* margin: 38px; */
+    cursor: pointer;
+}
+
+.categories__image-mobile{
+    width: 327px;
+height: 213px;
+background: #000000;
+border-radius: 24px;
+}
+.categories__image-mobile img{
+    width: 327px;
+height: 213px;
+background: #000000;
+border-radius: 24px;
+}
+
+.categories__image-mobile--YouTube{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #E1DCEB;
+}
+
+.categories__image-mobile--YouTube img{
+    background-color: #E1DCEB;
+    width: 153px;
+    height: 34px;
+    border-radius: 0;
+}
+
+@media screen and (max-width: 715px){
+    .categories__netflix{
+    display: none;
+    }
+    .categories__spotify{
+        display: none;
+    }
+    .categories__youtube{
+        display: none;
+    }
+    .categories__netflix-mobile{
+        display: block;
+    }
+    .categories__spotify-mobile{
+        display: block;
+    }
+    .categories__youtube-mobile{
+        display: block;
+    }
+    
+
+
+    
+}
