--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,13 @@
 @import url('./components/header.css');
 @import url('./components/start-using.css');
 @import url('./components/categories.css');
-@import url('/css/components/how-work.css');
-@import url('/css/components/invite.css');
-@import url('/css/components/about-us.css');
-@import url('/css/components/faq.css');
-@import url('/css/components/footer.css');
+@import url('./components/how-work.css');
+@import url('./components/invite.css');
+@import url('./components/about-us.css');
+@import url('./components/faq.css');
+@import url('./components/footer.css');
 @import url('./components/services.css');
 @import url('./components/netflix12mnth.css');
 @import url('./components/faqhtml.css');
 @import url('./components/popup.css');
+@import url('./components/header__mobile.css');
