--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -109,8 +109,8 @@ text-decoration-line: none;
 }
 
 .footer__language-list-item--dropdown:hover .footer__language-menu{
-opacity: 1;
-visibility: visible;
+opacity: 0;
+visibility: unset;
 }
 
 .footer__language-menu{
@@ -206,5 +206,41 @@ text-decoration-line: none;
 
   .footer__language{
     margin-top: 20px;
+  }
+
+  @media screen and (max-width: 910px){
+    .footer__links{
+        margin-left: 0;
+    }
+  }
+
+  @media screen and (max-width: 750px){
+    .footer__nav{
+        flex-direction: column;
+    }
+    .footer__links{
+        padding-top: 40px;
+        justify-content: space-between;
+        display: flex;
+        width: 100%;
+    }
+    .footer__links ul{
+        padding: 0;
+    }
+    .footer__lang{
+        padding-top: 42px;
+        display: flex;
+        justify-content: space-between;
+    }
+  }
+  
+  @media screen and (max-width: 530px){
+    .footer__copyright{
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer__copyright p{
+        margin: 12px;
+    }
   }
   
