--- a/css/components/header.css
+++ b/css/components/header.css
@@ -243,3 +243,57 @@ border-radius: 12px;
     background: #4B84FD;
     color: white;
 }
+
+.header__mobile-button{
+    display: none;
+}
+
+@media screen and (max-width: 1055px){
+    .header{
+        flex-direction: column;
+    }
+    .header__navigation{
+        margin-left: 30px;
+    }
+    .header__contacts{
+        padding-left: 30px;
+    }
+}
+
+@media screen and (max-width: 990px){
+    .header__navigation{
+        display: none;
+    }
+    .header__contacts{
+        display: none;
+    }
+    .header__language{
+        display: none;
+    }
+    .header__login{
+        display: none;
+    }
+    .header__mobile-button{
+        display: block;
+        cursor: pointer;
+        width: 18px;
+        height: 16px;
+        margin-right: 30px;
+    }
+    .header__container{
+        justify-content: space-between;
+        width: 100vw;
+    }
+    .header_humburger{
+        border: none;
+        background: none;
+        padding-top: 18px;
+    }
+
+}
+
+@media screen and (max-width: 390px){
+    .header__name span{
+        display: none;
+    }
+}
