--- a/css/components/popup.css
+++ b/css/components/popup.css
@@ -3,12 +3,13 @@
     width: 100%;
     height: 100vh;
     top: 0;
-    left: 40%;
+    left: 50%;
     z-index: 101;
-    transform: translateY(-1000px);
+    transform: translate(-50%, -250%);
   }
 
   .popup--active{
+        transition: 0.5s;
         width: 540px;
         top: 50%;
         left: 50%;
@@ -129,7 +130,7 @@ color: #0F0F0F;
 text-decoration: none;
 }
 
-.popup__btn-blue {
+.popup__btn-login {
     text-decoration: none;
     border-radius: 12px;
     width: 190px;
@@ -138,6 +139,7 @@ text-decoration: none;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Roboto';
     font-size: 18px;
     line-height: 130%;
     color: #fff;
@@ -145,6 +147,13 @@ text-decoration: none;
     border: #1749b3 1px solid;
     transition: all 0.4s ease 0s;
     font-weight: 700;
+}
+
+.popup__btn-login:hover{
+  background: white;
+  color: black;
+  border: 1px solid #1749B3;
+border-radius: 12px;
 }
 
 .sign-with__title {
