--- a/css/components/services.css
+++ b/css/components/services.css
@@ -198,3 +198,14 @@ font-size: 16px;
         background-color: rgb(93, 81, 255);
         color: white;
     }
+
+    @media screen and (max-width: 1300px){
+      .tariff__includes li{
+        height: auto;
+        width: auto;
+      }
+      .tariff{
+        width: 224px;
+        margin-top: 16px;
+      }
+    }
